--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
       - db
     environment:
       POSTGRES_HOST: db
-      POSTGRES_USER: postgres,
-      POSTGRES_PWD: 1234,
+      POSTGRES_USER: postgres
+      POSTGRES_PWD: 1234
       POSTGRES_DB: ingsoft2
       SERVER_ADDRESS: 0.0.0.0:8000
     ports:
