Funciona OK con mongo

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
-MONGO_USER = mongo
-MONGO_PASSWORD = mongo
-MONGO_DB = ms-users
+MONGO_USER=mongo
+MONGO_PASSWORD=mongo
+MONGO_DB=ms-users
 
-
-HOST = api-prod
-DATABASE_HOST = mongodb
-PORT = 8000
-DB_PORT = 27017
+HOST=api-prod
+DATABASE_HOST=mongodb
+PORT=8000
+DATABASE_PORT=27017
